--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -1,15 +1,8 @@
-<p>
-menu works!
-</p>
-
 <div class="menu-background">
-  
   <button mat-button [matMenuTriggerFor]="menu">Menu</button>
 
   <mat-menu #menu="matMenu">
-    <button mat-menu-item>Item 1</button>
-    <button mat-menu-item>Item 2</button>
+    <button mat-menu-item>Lista de usuários</button>
+    <button mat-menu-item>Lista de usuários</button>
   </mat-menu>
-
- </div>
- 
+</div>
