--- a/src/app/layout/menu/menu.component.html
+++ b/src/app/layout/menu/menu.component.html
@@ -3,6 +3,6 @@
 
   <mat-menu #menu="matMenu">
     <button mat-menu-item>Lista de usuários</button>
-    <button mat-menu-item>Lista de usuários</button>
+    <button mat-menu-item>Lista de CPF</button>
   </mat-menu>
 </div>
